# sbol-db

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  NOTICE  README.md  docker-compose.yaml
crates/sbol-db/: Cargo.toml
crates/sbol-db-backend/: Cargo.toml
crates/sbol-db-backend/src/: lib.rs
crates/sbol-db-conformance/: Cargo.toml
crates/sbol-db-conformance/src/: lib.rs
crates/sbol-db-core/: Cargo.toml
crates/sbol-db-core/benches/: kmer.rs
crates/sbol-db-core/src/: error.rs  ids.rs  iri.rs  kmer.rs  lib.rs  neighborhood.rs  obo.rs  projections.rs  quad.rs  record.rs  triple.rs  validation.rs
crates/sbol-db-core/tests/: properties.proptest-regressions  properties.rs
crates/sbol-db-derive/: Cargo.toml
crates/sbol-db-derive/src/: import.rs  lib.rs  ontology.rs
crates/sbol-db-jobs/: Cargo.toml
crates/sbol-db-jobs/src/: context.rs  handler.rs  handlers.rs  lib.rs  registry.rs  worker.rs
crates/sbol-db-jobs/src/handlers/: import_document.rs  import_remote_document.rs  import_synbiohub_collection.rs
crates/sbol-db-jobs/tests/: lifecycle_test.rs  registry_test.rs  worker_test.rs
crates/sbol-db-postgres/: Cargo.toml
crates/sbol-db-postgres/migrations/: 20260515000001_extensions_and_domains.sql  20260515000002_namespaces_and_documents.sql  20260515000003_sbol_objects.sql  20260515000004_sbol_quads.sql  20260515000004_sbol_triples.sql  20260515000005_validation.sql  20260515000006_object_revisions.sql  20260515000007_rdf_projection_events.sql  20260516000001_typed_sbol_projections.sql  20260517000001_sequence_kmers.sql  20260517000002_ontology.sql  20260518000001_jobs.sql  20260521000001_document_import_formats.sql  20260522000001_job_logs.sql  20260615000001_graph_registry.sql  20260615000002_fold_documents_into_graphs.sql  20260615000003_rename_document_id_to_graph_id.sql  20260628000001_sbol_triples_set_semantics.sql  20260628000002_accelerator.sql
crates/sbol-db-postgres/src/: lib.rs  pool.rs  repo.rs  service.rs  store_impls.rs
crates/sbol-db-postgres/src/repo/: accel.rs  document.rs  graph.rs  job.rs  lab.rs  neighborhood.rs  object.rs  ontology.rs  pg_stats.rs  projection.rs  projections.rs  quad.rs  sequence_search.rs  sql_console.rs  triple.rs  validation.rs
crates/sbol-db-postgres/tests/: bulk_test.rs  conformance_test.rs  graph_ownership_test.rs  import_test.rs  neighborhood_test.rs  ontology_test.rs  sequence_search_test.rs
crates/sbol-db-postgres/tests/fixtures/: invalid.ttl  simple_component.ttl  tiny_so.obo
crates/sbol-db-rdf/: Cargo.toml
crates/sbol-db-rdf/benches/: hash.rs
crates/sbol-db-rdf/src/: export.rs  hash.rs  lib.rs  project.rs  projections.rs  summary.rs  vocab.rs
crates/sbol-db-rdf/tests/: export_roundtrip.rs  hash_determinism.rs  projection.rs  summary_snapshot.rs  typed_projections.rs
crates/sbol-db-rdf/tests/snapshots/: export_roundtrip__simple_component_ntriples.snap  hash_determinism__empty_graph_hash.snap  hash_determinism__simple_component_hash.snap  summary_snapshot__simple_component_summaries.snap
crates/sbol-db-rocksdb/: Cargo.toml
crates/sbol-db-rocksdb/src/: accel.rs  codec.rs  convert.rs  db.rs  jobs.rs  keys.rs  lib.rs  migrate.rs  neighborhood.rs  sparql.rs  stats.rs  store.rs  triple_source.rs  triple_writer.rs
crates/sbol-db-rocksdb/src/repo/: accel.rs  graph.rs  job.rs  lab.rs  mod.rs  neighborhood.rs  object.rs  ontology.rs  sequence_search.rs  triple.rs
crates/sbol-db-rocksdb/tests/: conformance_test.rs
crates/sbol-db-server/: Cargo.toml
crates/sbol-db-server/src/: auth.rs  docs.rs  error.rs  export.rs  lib.rs  metrics.rs  openapi.json  routes.rs
crates/sbol-db-server/src/lab/: cancel.rs  convert.rs  documents.rs  graphs.rs  info.rs  mod.rs  observability.rs  overview.rs  schema.rs  sparql.rs  sql.rs  validate.rs
crates/sbol-db-server/tests/: error_paths_test.rs  health_test.rs  lab_schema_test.rs  lab_sql_test.rs  lab_validate_test.rs  synbiohub_endpoints_test.rs
crates/sbol-db-sparql/: Cargo.toml
crates/sbol-db-sparql/benches/: parse.rs
crates/sbol-db-sparql/src/: accel.rs  dataset.rs  engine.rs  error.rs  lib.rs  results.rs  rewrite.rs  update.rs
crates/sbol-db-sparql/tests/: accel_differential_test.rs  sparql_test.rs  synbiohub_compat_test.rs  synbiohub_sbol2.ttl  synbiohub_update_test.rs
crates/sbol-db-sqlite/: Cargo.toml
crates/sbol-db-sqlite/migrations/: 20260101000001_graphs_triples_objects.sql  20260101000002_jobs.sql  20260101000003_ontology.sql  20260101000004_sequences.sql  20260101000005_accelerator.sql
crates/sbol-db-sqlite/src/: lib.rs  pool.rs  sql_console.rs  stats.rs  store.rs
crates/sbol-db-sqlite/src/repo/: accel.rs  graph.rs  job.rs  lab.rs  mod.rs  neighborhood.rs  object.rs  ontology.rs  sequence_search.rs  triple.rs
crates/sbol-db-sqlite/tests/: conformance_test.rs
crates/sbol-db-storage/: Cargo.toml
crates/sbol-db-storage/src/: accel.rs  capabilities.rs  graph.rs  import.rs  job.rs  lab.rs  lib.rs  lsm.rs  migrate.rs  object.rs  ontology.rs  sequence.rs  sql_console.rs  stats.rs  traits.rs  triple.rs  update.rs
crates/sbol-db-ui/: Cargo.toml  README.md  build.rs
crates/sbol-db-ui/src/: assets.rs  lib.rs  stub.html
crates/sbol-db-ui/tests/: assets_test.rs
crates/sbol-db-ui/ui/: .gitignore  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts
crates/sbol-db-ui/ui/src/: App.tsx  main.tsx
crates/sbol-db-ui/ui/src/hooks/: useBackendInfo.ts  useDocuments.ts  useGraphs.ts  useObjects.ts  useObservability.ts  useOntologies.ts  useOverview.ts  useSchema.ts
crates/sbol-db-ui/ui/src/lib/: api.ts  export.ts  store.ts  theme.tsx  utils.ts
crates/sbol-db-ui/ui/src/routes/: DashboardRoute.tsx  DocumentDetailRoute.tsx  DocumentsRoute.tsx  (+21 more)
crates/sbol-db/src/: cli.rs  format.rs  main.rs  output.rs  signal.rs
crates/sbol-db/src/cmd/: db.rs  doc.rs  graph.rs  inspect.rs  jobs.rs  mod.rs  object.rs  ontology.rs  query.rs  server.rs  util.rs  worker.rs
crates/sbol-db/tests/: cli_smoke.rs  file_utils_smoke.rs  inspect_smoke.rs  jobs_ops_smoke.rs
(+76 files in other folders)
