[package]
name = "sbol-db-conformance"
version = "0.1.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Backend-neutral conformance scenarios every sbol-db-storage implementation must pass."

[dependencies]
sbol-db-core.workspace = true
sbol-db-storage.workspace = true
serde_json.workspace = true
