[package]
name = "sbol-db-core"
version = "0.1.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Domain types for sbol-db (no I/O dependencies)."

[dependencies]
serde.workspace = true
serde_json.workspace = true
uuid = { workspace = true }
chrono = { workspace = true }
thiserror.workspace = true
sbol-rdf.workspace = true

[dev-dependencies]
proptest = "1"
criterion = { workspace = true }

[[bench]]
name = "kmer"
harness = false
