[package]
name = "sbol-db-jobs"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Async job queue and worker runtime for sbol-db."

[dependencies]
sbol-db-core.workspace = true
sbol-db-postgres.workspace = true
sqlx.workspace = true
tokio.workspace = true
tokio-util = { version = "0.7", features = ["rt"] }
async-trait = "0.1"
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
futures = "0.3"
uuid.workspace = true
metrics.workspace = true
chrono.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync", "time"] }
