[package]
name = "sbol-db-postgres"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Postgres persistence layer for sbol-db."

[dependencies]
sbol-db-core.workspace = true
sbol-db-storage.workspace = true
sbol-db-rdf.workspace = true
sbol-db-derive.workspace = true
async-trait.workspace = true
sbol.workspace = true
sbol-rdf.workspace = true
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
reqwest.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync"] }
sbol-db-rdf.workspace = true
sbol-db-conformance.workspace = true
sbol.workspace = true
