[package]
name = "sbol-db-rdf"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "RDF projection helpers: sbol::Document <-> sbol-db domain quads."

[dependencies]
sbol-db-core.workspace = true
sbol.workspace = true
sbol-rdf.workspace = true
serde_json.workspace = true
sha3.workspace = true
hex.workspace = true

[dev-dependencies]
insta = { version = "1", features = ["yaml", "json"] }
criterion = { workspace = true }

[[bench]]
name = "hash"
harness = false
