[package]
name = "sbol-db-rocksdb"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "RocksDB persistence layer for sbol-db: a dictionary-encoded, permuted-index triplestore tuned for single-node performance."

[dependencies]
sbol-db-core.workspace = true
sbol-db-storage.workspace = true
sbol-db-rdf.workspace = true
sbol-db-derive.workspace = true
sbol-db-sqlite.workspace = true
sbol-db-sparql.workspace = true
sbol-rdf.workspace = true
oxigraph.workspace = true
oxrdf.workspace = true
spareval.workspace = true
sparesults.workspace = true
spargebra.workspace = true
sqlx = { workspace = true, features = ["sqlite"] }
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
tokio.workspace = true
tracing.workspace = true
reqwest.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
sbol-db-conformance.workspace = true
tempfile = "3"
