[package]
name = "sbol-db-server"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "HTTP server for sbol-db."

[dependencies]
sbol-db-core.workspace = true
sbol-db-rdf.workspace = true
sbol-db-postgres.workspace = true
sbol-db-sparql.workspace = true
sbol-db-jobs.workspace = true
sbol.workspace = true
sbol-rdf.workspace = true
axum.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_urlencoded.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
tracing.workspace = true
url.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true

[dev-dependencies]
tower = { workspace = true, features = ["util"] }
