[package]
name = "sbol-db-sparql"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Read-only SPARQL query engine over sbol_quads via spareval + spargebra."

[dependencies]
sbol-db-core.workspace = true
sbol-db-postgres.workspace = true
sbol-db-rdf.workspace = true
sbol-rdf.workspace = true

spareval.workspace = true
spargebra.workspace = true
sparesults.workspace = true
oxrdf.workspace = true
oxiri.workspace = true

tokio.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true

[dev-dependencies]
sbol.workspace = true
sqlx.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync", "time"] }
criterion = { workspace = true }

[[bench]]
name = "parse"
harness = false
