[package]
name = "sbol-db-sparql"
version = "0.1.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "SPARQL query and update engine over a TripleSource via spareval + spargebra."

[dependencies]
sbol-db-core.workspace = true
sbol-db-storage.workspace = true
sbol-db-rdf.workspace = true
sbol-rdf.workspace = true

spareval.workspace = true
spargebra.workspace = true
sparesults.workspace = true
oxrdf.workspace = true
oxiri.workspace = true

tokio = { workspace = true, features = ["rt", "time"] }
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true

[dev-dependencies]
sbol-db-postgres.workspace = true
sbol-db-rocksdb.workspace = true
sbol-db-sqlite.workspace = true
sbol.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tempfile = "3"
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync", "time"] }
criterion = { workspace = true }

[[bench]]
name = "parse"
harness = false
