[package]
name = "sbol-db-sqlite"
version = "0.1.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "SQLite persistence layer for sbol-db."

[dependencies]
sbol-db-core.workspace = true
sbol-db-storage.workspace = true
sbol-db-rdf.workspace = true
sbol-db-derive.workspace = true
sbol-rdf.workspace = true
sqlx = { workspace = true, features = ["sqlite"] }
async-trait.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
tokio.workspace = true
tracing.workspace = true
reqwest.workspace = true
hex.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
sbol-db-conformance.workspace = true
tempfile = "3"
