[package]
name = "sbol-db-ui"
version = "0.1.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Embedded TypeScript SPA for the sbol-db query lab bench."
build = "build.rs"

[dependencies]
axum.workspace = true
rust-embed = { version = "8", features = ["debug-embed", "interpolate-folder-path"] }
mime_guess = "2"
tracing.workspace = true

[build-dependencies]
walkdir = "2"
which = "7"

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tower = { workspace = true, features = ["util"] }
