[package]
name = "sbol-db"
version = "0.1.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI entry point for sbol-db."

[[bin]]
name = "sbol-db"
path = "src/main.rs"

[features]
default = ["lab"]
# Mirrors `sbol-db-server`'s `lab` feature so a `#[cfg(feature = "lab")]`
# in `main.rs` activates correctly. The binary forwards the flag rather
# than enabling it implicitly so `cargo build --no-default-features -p sbol-db`
# still strips the embedded UI.
lab = ["sbol-db-server/lab"]

[dependencies]
sbol-db-core.workspace = true
sbol-db-storage.workspace = true
sbol-db-rdf.workspace = true
sbol-db-postgres.workspace = true
sbol-db-backend.workspace = true
sbol-db-sparql.workspace = true
sbol-db-server.workspace = true
sbol-db-jobs.workspace = true
tokio-util = { version = "0.7", features = ["rt"] }
chrono.workspace = true
sbol.workspace = true
sbol-rdf.workspace = true
sqlx.workspace = true
tokio.workspace = true
clap.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
axum.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
